Added code for lesson 5 exercises